Bug 99104 - non-udev codepath doesn't work right
Summary: non-udev codepath doesn't work right
Status: RESOLVED FIXED
Alias: None
Product: plymouth
Classification: Unclassified
Component: general (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Ray Strode [halfline]
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-12-15 19:24 UTC by Ray Strode [halfline]
Modified: 2016-12-15 19:25 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
build-goo: make udev support build time optional (25.27 KB, patch)
2016-12-15 19:24 UTC, Ray Strode [halfline]
Details | Splinter Review
device-manager: dont pass terminal as renderer device (10.59 KB, patch)
2016-12-15 19:24 UTC, Ray Strode [halfline]
Details | Splinter Review

Description Ray Strode [halfline] 2016-12-15 19:24:07 UTC
Someone in #plymouth noticed the non-udev codepath doesn't work right for them on their embedded platform.
Comment 1 Ray Strode [halfline] 2016-12-15 19:24:47 UTC
Created attachment 128492 [details] [review]
build-goo: make udev support build time optional

Some set ups just use /dev/fb0 and don't need udev.
Comment 2 Ray Strode [halfline] 2016-12-15 19:24:49 UTC
Created attachment 128493 [details] [review]
device-manager: dont pass terminal as renderer device

Various bits of fall back code pass the terminal device
as the renderer device.  This is wrong, ply_renderer is
a graphical renderer abstraction.

This commit passes NULL in those cases, so each renderer
does what it's configured to do by default.
Comment 3 Ray Strode [halfline] 2016-12-15 19:25:03 UTC
Attachment 128492 [details] pushed as 0503571 - build-goo: make udev support build time optional
Attachment 128493 [details] pushed as 18dd755 - device-manager: dont pass terminal as renderer device


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.